[gd_scene load_steps=34 format=3 uid="uid://dmo013opbbiv6"]

[ext_resource type="Script" path="res://scripts/battle.gd" id="1_vc0iv"]
[ext_resource type="Texture2D" uid="uid://bfansoe7p3qs1" path="res://art/battle backgrounds/BB1 RSE Grass3.png" id="2_pajjb"]
[ext_resource type="Texture2D" uid="uid://r8jjmjykrkkg" path="res://art/battle backgrounds/BB2 FRLG Grass.png" id="3_vgnbn"]
[ext_resource type="PackedScene" uid="uid://cvukrrxa8nc4y" path="res://scenes/people/battle_trainer.tscn" id="4_povqv"]
[ext_resource type="AudioStream" uid="uid://bgl27ds4b0ndh" path="res://audio/battle_audio_clipped.mp3" id="5_yt1ta"]
[ext_resource type="PackedScene" uid="uid://dk16kckqtr4fp" path="res://scenes/pokemon.tscn" id="6_w3i06"]
[ext_resource type="Texture2D" uid="uid://bknsq15frmq4a" path="res://art/battle ui/health bar.png" id="7_ow8jn"]
[ext_resource type="PackedScene" uid="uid://becb07cvawnbe" path="res://scenes/ui/pokemon_menu.tscn" id="7_rgthj"]
[ext_resource type="FontFile" uid="uid://12hc8vr1yhvq" path="res://art/battle ui/silver font.ttf" id="8_5w1wq"]
[ext_resource type="Texture2D" uid="uid://clxpd4fl8tsen" path="res://art/battle ui/enemy health bar.png" id="8_cyd61"]
[ext_resource type="Script" path="res://scripts/TypeWriter.gd" id="8_kt53c"]
[ext_resource type="PackedScene" uid="uid://bm5eetld6n8pd" path="res://scenes/ui/attack_menu.tscn" id="8_xl8jv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yynsx"]
bg_color = Color(0.191909, 0.243874, 0.285756, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Animation" id="Animation_2w3nx"]
resource_name = "EnemyAttack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyPokemon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(868, 201), Vector2(802, 235), Vector2(868, 201)]
}

[sub_resource type="Animation" id="Animation_c3kiq"]
resource_name = "PlayerAttack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TrainerPokemon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(518, 531), Vector2(574, 497), Vector2(518, 531)]
}

[sub_resource type="Animation" id="Animation_fkupj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TrainerPokemon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(518, 531)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyPokemon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(868, 201)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u6fpa"]
_data = {
"EnemyAttack": SubResource("Animation_2w3nx"),
"PlayerAttack": SubResource("Animation_c3kiq"),
"RESET": SubResource("Animation_fkupj")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1sit6"]
texture = ExtResource("7_ow8jn")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_bcu3g"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_bi5mb"]
color = Color(0, 0.705882, 0, 1)
thickness = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b2aag"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_p6mpw"]
color = Color(0.742044, 0.828327, 1, 1)
thickness = 8

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s15qx"]
texture = ExtResource("8_cyd61")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pu0yc"]
bg_color = Color(0.993102, 0.576545, 0.625532, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4416f"]
bg_color = Color(0.826718, 0, 0.152947, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.659748, 0, 0.113405, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1baq"]
bg_color = Color(0.842521, 0.205239, 0.133794, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.357174, 0.352163, 0.331248, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5oldp"]
bg_color = Color(0.963031, 0.836843, 0.447507, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0k4ro"]
bg_color = Color(0.892961, 0.705119, 0.202492, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.366595, 0.366595, 0.366594, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ddp61"]
bg_color = Color(0.464853, 0.864077, 0.318483, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0akyc"]
bg_color = Color(0.240897, 0.612689, 0.161435, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.364706, 0.364706, 0.364706, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cs5f1"]
bg_color = Color(0.5577, 0.72704, 0.979352, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_typve"]
bg_color = Color(0.239216, 0.509804, 0.905882, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.111712, 0.348946, 0.68467, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xuid1"]
bg_color = Color(0.239216, 0.509804, 0.905882, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.364706, 0.364706, 0.364706, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="battle" type="Node2D"]
script = ExtResource("1_vc0iv")

[node name="Battle Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(3.5, 2.6)
texture = ExtResource("2_pajjb")

[node name="Enemy Platform" type="Sprite2D" parent="."]
position = Vector2(870, 218)
scale = Vector2(3.8, 3.8)
texture = ExtResource("3_vgnbn")

[node name="Trainer Platform" type="Sprite2D" parent="."]
position = Vector2(526, 545)
scale = Vector2(3.8, 3.8)
texture = ExtResource("3_vgnbn")

[node name="BattleTrainer" parent="." instance=ExtResource("4_povqv")]
position = Vector2(151, 515)
scale = Vector2(5, 5)

[node name="BattleCamera" type="Camera2D" parent="."]
position = Vector2(576, 324)
limit_left = 360
limit_top = 0
limit_right = 1152
limit_bottom = 648

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_yt1ta")
volume_db = 10.0
autoplay = true
parameters/looping = true

[node name="EnemyPokemon" parent="." instance=ExtResource("6_w3i06")]
position = Vector2(868, 201)
scale = Vector2(3.8, 3.8)

[node name="TrainerPokemonShow" type="Timer" parent="."]
one_shot = true

[node name="TrainerPokemon" parent="." instance=ExtResource("6_w3i06")]
position = Vector2(518, 531)
scale = Vector2(3.8, 3.8)

[node name="ReturnToWorld" type="Timer" parent="."]

[node name="Textbox" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.658824)
offset_left = 215.0
offset_top = 531.0
offset_right = 722.0
offset_bottom = 643.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yynsx")

[node name="Label" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 3.0
offset_right = -5.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_5w1wq")
theme_override_font_sizes/font_size = 50
text = "Hello from the editor!"
autowrap_mode = 3
script = ExtResource("8_kt53c")

[node name="AttackAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u6fpa")
}

[node name="PlayerControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 243.0
offset_top = 327.0
offset_right = 283.0
offset_bottom = 367.0

[node name="Panel" type="Panel" parent="PlayerControl"]
layout_mode = 0
offset_left = -239.0
offset_top = -88.0
offset_right = 384.0
offset_bottom = 128.0
scale = Vector2(0.7, 0.7)
theme_override_styles/panel = SubResource("StyleBoxTexture_1sit6")

[node name="HealthBar" type="ProgressBar" parent="PlayerControl"]
modulate = Color(2.79158e-06, 0.97611, 0.106406, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19
anchor_top = -0.4
anchor_right = 3.525
anchor_bottom = -0.375
offset_right = 38.0
offset_bottom = 10.0
theme_override_styles/background = SubResource("StyleBoxLine_bcu3g")
theme_override_styles/fill = SubResource("StyleBoxLine_bi5mb")
step = 0.0
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HealthProgress" type="Label" parent="PlayerControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.075
anchor_top = -0.075
anchor_right = 3.025
anchor_bottom = 0.4
offset_right = 62.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ExpBar" type="ProgressBar" parent="PlayerControl"]
modulate = Color(0, 0.470588, 0.952941, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = -2.675
anchor_top = 1.125
anchor_right = 4.5
anchor_bottom = 1.175
offset_left = 1.0
offset_bottom = 6.0
theme_override_styles/background = SubResource("StyleBoxFlat_b2aag")
theme_override_styles/fill = SubResource("StyleBoxLine_p6mpw")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Level" type="Label" parent="PlayerControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.05
anchor_top = -1.7
anchor_right = 3.05
anchor_bottom = -0.825
offset_right = 51.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_5w1wq")
theme_override_font_sizes/font_size = 52
text = "4"
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="PlayerControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -3.875
anchor_top = -1.8
anchor_right = -2.85
anchor_bottom = -0.925
offset_right = 90.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("8_5w1wq")
theme_override_font_sizes/font_size = 52
text = "SQUIRTLE
"
metadata/_edit_use_anchors_ = true

[node name="EnemyControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 614.0
offset_top = 124.0
offset_right = 654.0
offset_bottom = 164.0

[node name="Panel" type="Panel" parent="EnemyControl"]
layout_mode = 0
offset_left = -351.0
offset_top = -108.0
offset_right = 280.0
offset_bottom = 52.0
scale = Vector2(0.7, 0.7)
theme_override_styles/panel = SubResource("StyleBoxTexture_s15qx")

[node name="HealthBar" type="ProgressBar" parent="EnemyControl"]
modulate = Color(2.79158e-06, 0.97611, 0.106406, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = -4.175
anchor_top = -0.9
anchor_right = -0.875
anchor_bottom = -0.7
offset_right = 39.0
offset_bottom = 3.0
theme_override_styles/background = SubResource("StyleBoxLine_bcu3g")
theme_override_styles/fill = SubResource("StyleBoxLine_bi5mb")
step = 0.0
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HealthProgress" type="Label" parent="EnemyControl"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -3.375
anchor_top = -0.8
anchor_right = -2.075
anchor_bottom = -0.325
offset_right = 62.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Level" type="Label" parent="EnemyControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.3
anchor_top = -2.225
anchor_right = -1.3
anchor_bottom = -1.35
offset_right = 51.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_5w1wq")
theme_override_font_sizes/font_size = 52
text = "4"
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="EnemyControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -8.25
anchor_top = -2.325
anchor_right = -7.075
anchor_bottom = -1.45
offset_right = 90.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("8_5w1wq")
theme_override_font_sizes/font_size = 52
text = "SQUIRTLE
"
metadata/_edit_use_anchors_ = true

[node name="BattleControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 800.0
offset_top = 375.0
offset_right = 800.0
offset_bottom = 375.0

[node name="BattleBtnContainer" type="GridContainer" parent="BattleControl"]
visible = false
layout_mode = 0
offset_left = -47.0
offset_top = 84.0
offset_right = 113.0
offset_bottom = 144.0
scale = Vector2(2.5, 2.5)
columns = 2

[node name="AttackBtn" type="Button" parent="BattleControl/BattleBtnContainer"]
custom_minimum_size = Vector2(0, 28.5)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_pu0yc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4416f")
theme_override_styles/normal = SubResource("StyleBoxFlat_f1baq")
text = "Fight"

[node name="CaptureBtn" type="Button" parent="BattleControl/BattleBtnContainer"]
custom_minimum_size = Vector2(70, 28.5)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_5oldp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0k4ro")
theme_override_styles/normal = SubResource("StyleBoxFlat_0k4ro")
text = "Capture"

[node name="PokemonBtn" type="Button" parent="BattleControl/BattleBtnContainer"]
custom_minimum_size = Vector2(0, 28.5)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_ddp61")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0akyc")
theme_override_styles/normal = SubResource("StyleBoxFlat_0akyc")
text = "Pkmn
"

[node name="FleeBtn" type="Button" parent="BattleControl/BattleBtnContainer"]
custom_minimum_size = Vector2(78, 28.5)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_cs5f1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_typve")
theme_override_styles/normal = SubResource("StyleBoxFlat_xuid1")
text = "Run"

[node name="PokemonMenu" parent="." instance=ExtResource("7_rgthj")]
visible = false
offset_left = -36.0
offset_top = 24.0
offset_right = -36.0
offset_bottom = 24.0

[node name="AttackMenu" parent="." instance=ExtResource("8_xl8jv")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 446.0
offset_top = 348.0
offset_right = 446.0
offset_bottom = 348.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(3.2, 3.2)

[connection signal="timeout" from="TrainerPokemonShow" to="." method="_on_trainer_pokemon_show_timeout"]
[connection signal="timeout" from="ReturnToWorld" to="." method="_on_return_to_world_timeout"]
